// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover should render the popover with isInverse prop 1`] = `
.emotion-1 {
  background: #292F7C;
  border: 1px solid rgba(255,255,255,0.5);
  border-radius: 8px;
  box-shadow: 0 2px 6px 0 rgba(0,0,0,0.18);
  color: #FFFFFF;
  font-family: "Work Sans",Helvetica,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: visible;
  padding-left: 0;
  position: relative;
  text-align: left;
  width: auto;
  position: relative;
  background: #292F7C;
  display: none;
  max-height: 100%;
  opacity: 0;
  outline: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  white-space: nowrap;
  border: 1px solid #5D65CB;
  width: 100%;
}

.emotion-1::before {
  display: none;
  content: '';
  position: absolute;
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 11px;
}

.emotion-1[data-popover-placement=bottom]::before {
  border-color: transparent transparent #5D65CB transparent;
  left: 50%;
  bottom: 100%;
  -webkit-transform: translateX(-50%) rotate(0deg);
  -moz-transform: translateX(-50%) rotate(0deg);
  -ms-transform: translateX(-50%) rotate(0deg);
  transform: translateX(-50%) rotate(0deg);
}

.emotion-1[data-popover-placement=top]::before {
  border-color: #5D65CB transparent transparent transparent;
  left: 50%;
  top: 100%;
  -webkit-transform: translateX(-50%) rotate(0deg);
  -moz-transform: translateX(-50%) rotate(0deg);
  -ms-transform: translateX(-50%) rotate(0deg);
  transform: translateX(-50%) rotate(0deg);
}

.emotion-1::after {
  display: none;
  content: '';
  position: absolute;
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 10px;
}

.emotion-1[data-popover-placement=bottom]::after {
  border-color: transparent transparent #292F7C transparent;
  left: 50%;
  bottom: 100%;
  -webkit-transform: translateX(-50%) rotate(0deg);
  -moz-transform: translateX(-50%) rotate(0deg);
  -ms-transform: translateX(-50%) rotate(0deg);
  transform: translateX(-50%) rotate(0deg);
}

.emotion-1[data-popover-placement=top]::after {
  border-color: #292F7C transparent transparent transparent;
  left: 50%;
  top: 100%;
  -webkit-transform: translateX(-50%) rotate(0deg);
  -moz-transform: translateX(-50%) rotate(0deg);
  -ms-transform: translateX(-50%) rotate(0deg);
  transform: translateX(-50%) rotate(0deg);
}

.emotion-3 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow-y: auto;
  padding: 16px;
  height: inherit;
  white-space: normal;
}

.emotion-1 {
  background: #292F7C;
  border: 1px solid rgba(255,255,255,0.5);
  border-radius: 8px;
  box-shadow: 0 2px 6px 0 rgba(0,0,0,0.18);
  color: #FFFFFF;
  font-family: "Work Sans",Helvetica,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: visible;
  padding-left: 0;
  position: relative;
  text-align: left;
  width: auto;
  position: relative;
  background: #292F7C;
  display: none;
  max-height: 100%;
  opacity: 0;
  outline: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  white-space: nowrap;
  border: 1px solid #5D65CB;
  width: 100%;
}

.emotion-1::before {
  display: none;
  content: '';
  position: absolute;
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 11px;
}

.emotion-1[data-popover-placement=bottom]::before {
  border-color: transparent transparent #5D65CB transparent;
  left: 50%;
  bottom: 100%;
  -webkit-transform: translateX(-50%) rotate(0deg);
  -moz-transform: translateX(-50%) rotate(0deg);
  -ms-transform: translateX(-50%) rotate(0deg);
  transform: translateX(-50%) rotate(0deg);
}

.emotion-1[data-popover-placement=top]::before {
  border-color: #5D65CB transparent transparent transparent;
  left: 50%;
  top: 100%;
  -webkit-transform: translateX(-50%) rotate(0deg);
  -moz-transform: translateX(-50%) rotate(0deg);
  -ms-transform: translateX(-50%) rotate(0deg);
  transform: translateX(-50%) rotate(0deg);
}

.emotion-1::after {
  display: none;
  content: '';
  position: absolute;
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 10px;
}

.emotion-1[data-popover-placement=bottom]::after {
  border-color: transparent transparent #292F7C transparent;
  left: 50%;
  bottom: 100%;
  -webkit-transform: translateX(-50%) rotate(0deg);
  -moz-transform: translateX(-50%) rotate(0deg);
  -ms-transform: translateX(-50%) rotate(0deg);
  transform: translateX(-50%) rotate(0deg);
}

.emotion-1[data-popover-placement=top]::after {
  border-color: #292F7C transparent transparent transparent;
  left: 50%;
  top: 100%;
  -webkit-transform: translateX(-50%) rotate(0deg);
  -moz-transform: translateX(-50%) rotate(0deg);
  -ms-transform: translateX(-50%) rotate(0deg);
  transform: translateX(-50%) rotate(0deg);
}

.emotion-3 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow-y: auto;
  padding: 16px;
  height: inherit;
  white-space: normal;
}

<div
  class="emotion-0 emotion-1 emotion-2"
  data-popover-placement="bottom"
  data-testid="popoverContent"
  tabindex="-1"
  width="auto"
>
  <div
    aria-labelledby="popoverWithInverseStyles_trigger"
    role="dialog"
  >
    <div
      aria-live="polite"
      class="emotion-3 emotion-4"
      style="max-height: 100%;"
    >
      <div
        class="emotion-5 emotion-6"
      >
        <span
          theme="[object Object]"
        >
          Content
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Popover should render the popover with pointer by default 1`] = `
.emotion-1 {
  background: #FFFFFF;
  border: 1px solid #D4D4D4;
  border-radius: 8px;
  box-shadow: 0 2px 6px 0 rgba(0,0,0,0.18);
  color: #454545;
  font-family: "Work Sans",Helvetica,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: visible;
  padding-left: 0;
  position: relative;
  text-align: left;
  width: auto;
  position: relative;
  background: #FFFFFF;
  display: none;
  max-height: 100%;
  opacity: 0;
  outline: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  white-space: nowrap;
  border: 1px solid #D4D4D4;
  width: 100%;
}

.emotion-1::before {
  display: none;
  content: '';
  position: absolute;
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 11px;
}

.emotion-1[data-popover-placement=bottom]::before {
  border-color: transparent transparent #D4D4D4 transparent;
  left: 50%;
  bottom: 100%;
  -webkit-transform: translateX(-50%) rotate(0deg);
  -moz-transform: translateX(-50%) rotate(0deg);
  -ms-transform: translateX(-50%) rotate(0deg);
  transform: translateX(-50%) rotate(0deg);
}

.emotion-1[data-popover-placement=top]::before {
  border-color: #D4D4D4 transparent transparent transparent;
  left: 50%;
  top: 100%;
  -webkit-transform: translateX(-50%) rotate(0deg);
  -moz-transform: translateX(-50%) rotate(0deg);
  -ms-transform: translateX(-50%) rotate(0deg);
  transform: translateX(-50%) rotate(0deg);
}

.emotion-1::after {
  display: none;
  content: '';
  position: absolute;
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 10px;
}

.emotion-1[data-popover-placement=bottom]::after {
  border-color: transparent transparent #FFFFFF transparent;
  left: 50%;
  bottom: 100%;
  -webkit-transform: translateX(-50%) rotate(0deg);
  -moz-transform: translateX(-50%) rotate(0deg);
  -ms-transform: translateX(-50%) rotate(0deg);
  transform: translateX(-50%) rotate(0deg);
}

.emotion-1[data-popover-placement=top]::after {
  border-color: #FFFFFF transparent transparent transparent;
  left: 50%;
  top: 100%;
  -webkit-transform: translateX(-50%) rotate(0deg);
  -moz-transform: translateX(-50%) rotate(0deg);
  -ms-transform: translateX(-50%) rotate(0deg);
  transform: translateX(-50%) rotate(0deg);
}

.emotion-3 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow-y: auto;
  padding: 16px;
  height: inherit;
  white-space: normal;
}

.emotion-1 {
  background: #FFFFFF;
  border: 1px solid #D4D4D4;
  border-radius: 8px;
  box-shadow: 0 2px 6px 0 rgba(0,0,0,0.18);
  color: #454545;
  font-family: "Work Sans",Helvetica,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: visible;
  padding-left: 0;
  position: relative;
  text-align: left;
  width: auto;
  position: relative;
  background: #FFFFFF;
  display: none;
  max-height: 100%;
  opacity: 0;
  outline: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  white-space: nowrap;
  border: 1px solid #D4D4D4;
  width: 100%;
}

.emotion-1::before {
  display: none;
  content: '';
  position: absolute;
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 11px;
}

.emotion-1[data-popover-placement=bottom]::before {
  border-color: transparent transparent #D4D4D4 transparent;
  left: 50%;
  bottom: 100%;
  -webkit-transform: translateX(-50%) rotate(0deg);
  -moz-transform: translateX(-50%) rotate(0deg);
  -ms-transform: translateX(-50%) rotate(0deg);
  transform: translateX(-50%) rotate(0deg);
}

.emotion-1[data-popover-placement=top]::before {
  border-color: #D4D4D4 transparent transparent transparent;
  left: 50%;
  top: 100%;
  -webkit-transform: translateX(-50%) rotate(0deg);
  -moz-transform: translateX(-50%) rotate(0deg);
  -ms-transform: translateX(-50%) rotate(0deg);
  transform: translateX(-50%) rotate(0deg);
}

.emotion-1::after {
  display: none;
  content: '';
  position: absolute;
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 10px;
}

.emotion-1[data-popover-placement=bottom]::after {
  border-color: transparent transparent #FFFFFF transparent;
  left: 50%;
  bottom: 100%;
  -webkit-transform: translateX(-50%) rotate(0deg);
  -moz-transform: translateX(-50%) rotate(0deg);
  -ms-transform: translateX(-50%) rotate(0deg);
  transform: translateX(-50%) rotate(0deg);
}

.emotion-1[data-popover-placement=top]::after {
  border-color: #FFFFFF transparent transparent transparent;
  left: 50%;
  top: 100%;
  -webkit-transform: translateX(-50%) rotate(0deg);
  -moz-transform: translateX(-50%) rotate(0deg);
  -ms-transform: translateX(-50%) rotate(0deg);
  transform: translateX(-50%) rotate(0deg);
}

.emotion-3 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow-y: auto;
  padding: 16px;
  height: inherit;
  white-space: normal;
}

<div
  class="emotion-0 emotion-1 emotion-2"
  data-popover-placement="bottom"
  data-testid="popoverContent"
  tabindex="-1"
  width="auto"
>
  <div
    aria-labelledby="popoverWithPointer_trigger"
    role="dialog"
  >
    <div
      aria-live="polite"
      class="emotion-3 emotion-4"
      style="max-height: 100%;"
    >
      <div
        class="emotion-5 emotion-6"
      >
        <span
          theme="[object Object]"
        >
          Content
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Popover should render the popover with target width 1`] = `
.emotion-1 {
  background: #FFFFFF;
  border: 1px solid #D4D4D4;
  border-radius: 8px;
  box-shadow: 0 2px 6px 0 rgba(0,0,0,0.18);
  color: #454545;
  font-family: "Work Sans",Helvetica,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: visible;
  padding-left: 0;
  position: relative;
  text-align: left;
  width: 0px;
  position: relative;
  background: #FFFFFF;
  display: none;
  max-height: 100%;
  opacity: 0;
  outline: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  white-space: nowrap;
  border: 1px solid #D4D4D4;
  width: 0px;
}

.emotion-1::before {
  display: none;
  content: '';
  position: absolute;
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 11px;
}

.emotion-1[data-popover-placement=bottom]::before {
  border-color: transparent transparent #D4D4D4 transparent;
  left: 50%;
  bottom: 100%;
  -webkit-transform: translateX(-50%) rotate(0deg);
  -moz-transform: translateX(-50%) rotate(0deg);
  -ms-transform: translateX(-50%) rotate(0deg);
  transform: translateX(-50%) rotate(0deg);
}

.emotion-1[data-popover-placement=top]::before {
  border-color: #D4D4D4 transparent transparent transparent;
  left: 50%;
  top: 100%;
  -webkit-transform: translateX(-50%) rotate(0deg);
  -moz-transform: translateX(-50%) rotate(0deg);
  -ms-transform: translateX(-50%) rotate(0deg);
  transform: translateX(-50%) rotate(0deg);
}

.emotion-1::after {
  display: none;
  content: '';
  position: absolute;
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 10px;
}

.emotion-1[data-popover-placement=bottom]::after {
  border-color: transparent transparent #FFFFFF transparent;
  left: 50%;
  bottom: 100%;
  -webkit-transform: translateX(-50%) rotate(0deg);
  -moz-transform: translateX(-50%) rotate(0deg);
  -ms-transform: translateX(-50%) rotate(0deg);
  transform: translateX(-50%) rotate(0deg);
}

.emotion-1[data-popover-placement=top]::after {
  border-color: #FFFFFF transparent transparent transparent;
  left: 50%;
  top: 100%;
  -webkit-transform: translateX(-50%) rotate(0deg);
  -moz-transform: translateX(-50%) rotate(0deg);
  -ms-transform: translateX(-50%) rotate(0deg);
  transform: translateX(-50%) rotate(0deg);
}

.emotion-3 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow-y: auto;
  padding: 16px;
  height: inherit;
  white-space: normal;
}

.emotion-1 {
  background: #FFFFFF;
  border: 1px solid #D4D4D4;
  border-radius: 8px;
  box-shadow: 0 2px 6px 0 rgba(0,0,0,0.18);
  color: #454545;
  font-family: "Work Sans",Helvetica,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: visible;
  padding-left: 0;
  position: relative;
  text-align: left;
  width: 0px;
  position: relative;
  background: #FFFFFF;
  display: none;
  max-height: 100%;
  opacity: 0;
  outline: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  white-space: nowrap;
  border: 1px solid #D4D4D4;
  width: 0px;
}

.emotion-1::before {
  display: none;
  content: '';
  position: absolute;
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 11px;
}

.emotion-1[data-popover-placement=bottom]::before {
  border-color: transparent transparent #D4D4D4 transparent;
  left: 50%;
  bottom: 100%;
  -webkit-transform: translateX(-50%) rotate(0deg);
  -moz-transform: translateX(-50%) rotate(0deg);
  -ms-transform: translateX(-50%) rotate(0deg);
  transform: translateX(-50%) rotate(0deg);
}

.emotion-1[data-popover-placement=top]::before {
  border-color: #D4D4D4 transparent transparent transparent;
  left: 50%;
  top: 100%;
  -webkit-transform: translateX(-50%) rotate(0deg);
  -moz-transform: translateX(-50%) rotate(0deg);
  -ms-transform: translateX(-50%) rotate(0deg);
  transform: translateX(-50%) rotate(0deg);
}

.emotion-1::after {
  display: none;
  content: '';
  position: absolute;
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 10px;
}

.emotion-1[data-popover-placement=bottom]::after {
  border-color: transparent transparent #FFFFFF transparent;
  left: 50%;
  bottom: 100%;
  -webkit-transform: translateX(-50%) rotate(0deg);
  -moz-transform: translateX(-50%) rotate(0deg);
  -ms-transform: translateX(-50%) rotate(0deg);
  transform: translateX(-50%) rotate(0deg);
}

.emotion-1[data-popover-placement=top]::after {
  border-color: #FFFFFF transparent transparent transparent;
  left: 50%;
  top: 100%;
  -webkit-transform: translateX(-50%) rotate(0deg);
  -moz-transform: translateX(-50%) rotate(0deg);
  -ms-transform: translateX(-50%) rotate(0deg);
  transform: translateX(-50%) rotate(0deg);
}

.emotion-3 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow-y: auto;
  padding: 16px;
  height: inherit;
  white-space: normal;
}

<div
  class="emotion-0 emotion-1 emotion-2"
  data-popover-placement="bottom"
  data-testid="popoverContent"
  tabindex="-1"
  width="0px"
>
  <div
    aria-labelledby="popoverWithTargetWidth_trigger"
    role="dialog"
  >
    <div
      aria-live="polite"
      class="emotion-3 emotion-4"
      style="max-height: 100%;"
    >
      <div
        class="emotion-5 emotion-6"
      >
        <span
          theme="[object Object]"
        >
          Content
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Popover should render the popover without pointer 1`] = `
.emotion-1 {
  background: #FFFFFF;
  border: 1px solid #D4D4D4;
  border-radius: 8px;
  box-shadow: 0 2px 6px 0 rgba(0,0,0,0.18);
  color: #454545;
  font-family: "Work Sans",Helvetica,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: visible;
  padding-left: 0;
  position: relative;
  text-align: left;
  width: auto;
  position: relative;
  background: #FFFFFF;
  display: none;
  max-height: 100%;
  opacity: 0;
  outline: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  white-space: nowrap;
  border: 1px solid #D4D4D4;
  width: 100%;
}

.emotion-1::before {
  display: none;
  content: '';
  position: absolute;
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 11px;
}

.emotion-1[data-popover-placement=bottom]::before {
  border-color: transparent transparent #D4D4D4 transparent;
  left: 50%;
  bottom: 100%;
  -webkit-transform: translateX(-50%) rotate(0deg);
  -moz-transform: translateX(-50%) rotate(0deg);
  -ms-transform: translateX(-50%) rotate(0deg);
  transform: translateX(-50%) rotate(0deg);
}

.emotion-1[data-popover-placement=top]::before {
  border-color: #D4D4D4 transparent transparent transparent;
  left: 50%;
  top: 100%;
  -webkit-transform: translateX(-50%) rotate(0deg);
  -moz-transform: translateX(-50%) rotate(0deg);
  -ms-transform: translateX(-50%) rotate(0deg);
  transform: translateX(-50%) rotate(0deg);
}

.emotion-1::after {
  display: none;
  content: '';
  position: absolute;
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 10px;
}

.emotion-1[data-popover-placement=bottom]::after {
  border-color: transparent transparent #FFFFFF transparent;
  left: 50%;
  bottom: 100%;
  -webkit-transform: translateX(-50%) rotate(0deg);
  -moz-transform: translateX(-50%) rotate(0deg);
  -ms-transform: translateX(-50%) rotate(0deg);
  transform: translateX(-50%) rotate(0deg);
}

.emotion-1[data-popover-placement=top]::after {
  border-color: #FFFFFF transparent transparent transparent;
  left: 50%;
  top: 100%;
  -webkit-transform: translateX(-50%) rotate(0deg);
  -moz-transform: translateX(-50%) rotate(0deg);
  -ms-transform: translateX(-50%) rotate(0deg);
  transform: translateX(-50%) rotate(0deg);
}

.emotion-3 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow-y: auto;
  padding: 16px;
  height: inherit;
  white-space: normal;
}

.emotion-1 {
  background: #FFFFFF;
  border: 1px solid #D4D4D4;
  border-radius: 8px;
  box-shadow: 0 2px 6px 0 rgba(0,0,0,0.18);
  color: #454545;
  font-family: "Work Sans",Helvetica,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: visible;
  padding-left: 0;
  position: relative;
  text-align: left;
  width: auto;
  position: relative;
  background: #FFFFFF;
  display: none;
  max-height: 100%;
  opacity: 0;
  outline: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  white-space: nowrap;
  border: 1px solid #D4D4D4;
  width: 100%;
}

.emotion-1::before {
  display: none;
  content: '';
  position: absolute;
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 11px;
}

.emotion-1[data-popover-placement=bottom]::before {
  border-color: transparent transparent #D4D4D4 transparent;
  left: 50%;
  bottom: 100%;
  -webkit-transform: translateX(-50%) rotate(0deg);
  -moz-transform: translateX(-50%) rotate(0deg);
  -ms-transform: translateX(-50%) rotate(0deg);
  transform: translateX(-50%) rotate(0deg);
}

.emotion-1[data-popover-placement=top]::before {
  border-color: #D4D4D4 transparent transparent transparent;
  left: 50%;
  top: 100%;
  -webkit-transform: translateX(-50%) rotate(0deg);
  -moz-transform: translateX(-50%) rotate(0deg);
  -ms-transform: translateX(-50%) rotate(0deg);
  transform: translateX(-50%) rotate(0deg);
}

.emotion-1::after {
  display: none;
  content: '';
  position: absolute;
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 10px;
}

.emotion-1[data-popover-placement=bottom]::after {
  border-color: transparent transparent #FFFFFF transparent;
  left: 50%;
  bottom: 100%;
  -webkit-transform: translateX(-50%) rotate(0deg);
  -moz-transform: translateX(-50%) rotate(0deg);
  -ms-transform: translateX(-50%) rotate(0deg);
  transform: translateX(-50%) rotate(0deg);
}

.emotion-1[data-popover-placement=top]::after {
  border-color: #FFFFFF transparent transparent transparent;
  left: 50%;
  top: 100%;
  -webkit-transform: translateX(-50%) rotate(0deg);
  -moz-transform: translateX(-50%) rotate(0deg);
  -ms-transform: translateX(-50%) rotate(0deg);
  transform: translateX(-50%) rotate(0deg);
}

.emotion-3 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow-y: auto;
  padding: 16px;
  height: inherit;
  white-space: normal;
}

<div
  class="emotion-0 emotion-1 emotion-2"
  data-popover-placement="bottom"
  data-testid="popoverContent"
  tabindex="-1"
  width="auto"
>
  <div
    aria-labelledby="popoverWithoutPointer_trigger"
    role="dialog"
  >
    <div
      aria-live="polite"
      class="emotion-3 emotion-4"
      style="max-height: 100%;"
    >
      <div
        class="emotion-5 emotion-6"
      >
        <span
          theme="[object Object]"
        >
          Content
        </span>
      </div>
    </div>
  </div>
</div>
`;
